test_programs/compile_failure/noirc_frontend_monomorphization_tests_recursive_type_with_alias_errors/src/main.nr

        fn main() {
            let _tree: Opt<OptAlias<()>> = Opt::Some(OptAlias::None);
        }

        type OptAlias<T> = Opt<T>;

        enum Opt<T> {
            Some(T),
            None,
        }
        